--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@angular/platform-browser": "~11.2.10",
     "@angular/platform-browser-dynamic": "~11.2.10",
     "@angular/router": "~11.2.10",
+    "@ng-web-apis/common": "^1.9.0",
+    "@ng-web-apis/geolocation": "^1.0.4",
     "bootstrap": "^5.0.0-beta2",
     "ngx-toastr": "^14.0.0",
     "rxjs": "~6.6.0",
@@ -29,6 +31,7 @@
     "@angular-devkit/build-angular": "~0.1102.9",
     "@angular/cli": "~11.2.9",
     "@angular/compiler-cli": "~11.2.10",
+    "@types/googlemaps": "^3.43.3",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
